--- a/cv.html
+++ b/cv.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Side-Bar Test</title>
+        <title>Alex Suggs</title>
         <!-- import custom box icons form web -->
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <link rel="stylesheet" href="css/main.css">
@@ -25,7 +25,7 @@
             </div>
             <div class="user">
                 <!-- utilize headshot img -->
-                <img src="img/2024-10-11_pinterest_pfp.jpg" alt="me" class="user-img">
+                <img src="img/2025-01-20_square_headshot.jpg" alt="me" class="user-img">
                 <!-- text that will sit beside headshot img -->
                 <div>
                     <p class="bold">Alex</p>
@@ -66,12 +66,39 @@
 
         <!-- Main Content -->
         <div class="main-content">
-            <!-- Header -->
+            <!-- Header: CV -->
             <div class="contaier">
-                <h1>CV</h1>
+                <h2>Curriculum Vitae</h2>
             </div>
-            <!-- Hero w/ CV text -->
-            <div class="container"></div>
+            <!-- EDUCATION -->
+            <div class="container">
+                <h1>Education</h1>
+            </div>
+            <!-- University -->
+            <div class="container">
+                <p><strong>University of California, Berkeley</strong></p>
+                <p><strong>May 2026</strong></p>
+            </div>
+            <div class="container">
+                <p>Bachelor of Arts in Data Science</p>
+                <p>GPA: 3.57/4.00</p>
+            </div>
+            <!-- Community College -->
+            <div class="container">
+                <p><strong>Bakersfield College</strong></p>
+                <p><strong>May 2024</strong></p>
+            </div>
+            <div class="container">
+                <p>Associates of Science in Mathematics</p>
+                <p>GPA: 3.74/4.00</p>
+            </div>
+
+            <!-- SKILLS -->
+            <div class="container">
+                <h1>Skills</h1>
+            </div>
+            
+
         
             <!-- Footer -->
             <footer class="footer-content">
