--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="user">
                 <!-- utilize headshot img -->
-                <img src="img/2024-10-11_pinterest_pfp.jpg" alt="me" class="user-img">
+                <img src="img/2025-01-20_square_headshot.jpg" alt="me" class="user-img">
                 <!-- text that will sit beside headshot img -->
                 <div>
                     <p class="bold">Alex</p>
@@ -69,7 +69,7 @@
         <div class="main-content">
             <!-- Hero Header -->
             <div class="container">
-                <h1>Career Objectives</h1>
+                <h1><strong>Career Objectives</strong></h1>
             </div>
             <!-- Hero Text -->
             <div class="container">
@@ -86,14 +86,6 @@
                     </div>
                 </div>
             
-            <!-- Hero Header -->
-            <div class="container">
-                <h1>Hobbies</h1>
-            </div>
-            <!-- Hero Text for Hobbies -->
-            <div class="container">
-                <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Sapien habitasse mus ex platea vehicula sollicitudin. Fusce curabitur mauris dis netus donec habitant magnis consectetur. Nascetur habitant parturient himenaeos porttitor arcu nascetur nascetur. Laoreet consectetur dictumst montes ridiculus turpis tempor taciti luctus dolor. Nullam faucibus rhoncus himenaeos magnis dapibus ac aliquam nullam. Mus sapien eget inceptos euismod id lacinia. Ultrices interdum nulla eros tellus fringilla faucibus sed. Cras varius torquent faucibus dapibus efficitur mus augue litora.</p>
-            </div>
 
             <!-- Footer -->
             <footer class="footer-content">
