--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Side-Bar Test</title>
+        <title>Alex Suggs</title>
         <!-- import custom box icons form web -->
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <link rel="stylesheet" href="css/main.css">
@@ -25,7 +25,7 @@
             </div>
             <div class="user">
                 <!-- utilize headshot img -->
-                <img src="img/2024-10-11_pinterest_pfp.jpg" alt="me" class="user-img">
+                <img src="img/2025-01-20_square_headshot.jpg" alt="me" class="user-img">
                 <!-- text that will sit beside headshot img -->
                 <div>
                     <p class="bold">Alex</p>
@@ -68,7 +68,7 @@
         <div class="main-content">
             <!-- Header -->
             <div class="container">
-                <h1>Portfolio</h1>
+                <h2>Portfolio</h2>
             </div>
             <!-- Hero w/ Projects -->
             <div class="containter"></div>
